APDS-174, APDS-175 Applied fix for issues on save and discard buttons showing incorrect color in light scheme. Also matched button style and order to that of the inactivation screen so the screens visually matched up more. Same for inactivation screen button was showing wrong color in the inactivation screen in light color scheme. Also updated header to match batch screens.

--- a/app/styles/inactivation.scss
+++ b/app/styles/inactivation.scss
@@ -32,33 +32,33 @@
 
    
 
-    .btn-default.cancel-inactivation-btn:disabled,
-    .btn-default.complete-inactivation-btn:disabled {
+    .btn-default.cancel-action-btn:disabled,
+    .btn-default.complete-action-btn:disabled {
       background-color: #d8d8d8;
       color: #909090;
 
     }
 
-    .btn-default.cancel-inactivation-btn {
+    .btn-default.cancel-action-btn {
       background-color: #db5760;
       color: #fff;
       border-radius: 4px !important;
     }
 
-    .btn-default.cancel-inactivation-btn:hover,
-    .btn-default.cancel-inactivation-btn:active {
+    .btn-default.cancel-action-btn:hover,
+    .btn-default.cancel-action-btn:active {
       background-color: #a9142d;
 
     }
 
-    .btn-default.complete-inactivation-btn {
+    .btn-default.complete-action-btn {
       background-color: #4cb476;
       color: #fff;
       border-radius: 4px !important;
     }
 
-    .btn-default.complete-inactivation-btn:hover,
-    .btn-default.complete-inactivation-btn:active {
+    .btn-default.complete-action-btn:hover,
+    .btn-default.complete-action-btn:active {
       background-color: #388457;
 
     }
